--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ script:
   - pytest --cov=src tests
 after_success:
   - codecov                        # Upload report to codecov.io
+- name: Codecov
+  uses: codecov/codecov-action@v3.1.1
