--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
   - pytest --cov=src tests
 after_success:
   - codecov                        # Upload report to codecov.io
-
+steps:
+  - uses: actions/checkout@master
   - name: Codecov
-    uses: codecov/codecov-action@v3.1.1
+  - uses: codecov/codecov-action@v3.1.1
