--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-# local package
--e .
-
-# external requirements
-boto3==1.24.22 
-Collectfast==2.2.0
-Django==4.0.6 
-django-environ==0.9.0
-psycopg2-binary==2.9.3
-Werkzeug==2.2.2
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-timesfm 
+altair
+matplotlib
+numpy
+pandas
+seaborn
+statsmodels
+scikit-learn
