cleanup eda and add docstrings

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python tests\test_environment.py test
+        python tests/test_environment.py test
