--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,31 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Set up Python 3.10.14
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10.14
+        python-version: "3.10"
+    
+    - name: Set up Conda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: oil-prices
+        environment-file: environment.yaml
+        auto-activate-base: false
     
     - name: Install dependencies
+      shell: bash -l {0}
       run: |
+        conda activate oil-prices
         python -m pip install --upgrade pip
-        pip install -e .
+        pip install -r requirements.txt
         pip install pytest-cov codecov
     
     - name: Run tests with pytest
-      run: pytest --cov=src tests
+      shell: bash -l {0}
+      run: |
+        conda activate oil-prices
+        pytest --cov=src tests
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
