--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,20 +19,23 @@ jobs:
         activate-environment: oil-prices
         environment-file: environment.yaml
         auto-activate-base: false
+        auto-update-conda: true
     
     - name: Install additional dependencies
+      shell: bash -l {0}
       run: |
-        conda activate oil-prices
+        conda info
+        conda list
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest-cov codecov
     
     - name: Run tests with pytest
+      shell: bash -l {0}
       run: |
-        conda activate oil-prices
         pytest --cov=src tests
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        fail_ci_if_error: false
+        fail_ci_if_error: true
