--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ codecov.asc
 codecov.exe.SHA256SUM
 __pycache__/test_environment.cpython-38-pytest-7.1.3.pyc
 tests/visualization/__pycache__/__init__.cpython-38.pyc
+
+.ipynb_checkpoints/explore_oil_markets-checkpoint.ipynb
